--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			</section>
 
 			<section data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
-				<h2>Hello There</h2>
+				<h2>Hello </h2>
 				<p>
 					reveal.js enables you to create beautiful interactive slide decks using HTML. This presentation will
 					show you examples of what it can do.
