--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<section data-background-transition="zoom" data-transition="convex" data-background-image="img/logo.png"
 				data-background-size="300px" data-background-position="98% 3%">
 				<h4>Tecnologías</h4>
-				<img src="./img/stack.PNG" alt="" style="width: 600px;height: 400px;">
+				<img src="./img/stack.png" alt="" style="width: 600px;height: 400px;">
 			</section>
 				
 			<!-- inicio fundamentos -->
